# LINGOKATUTUBO

./: .gitignore  README.md
frontend/src/: App.css  App.jsx
lingokatutubo/: .gitignore  ARCHITECTURE_DIAGRAM.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  RUNNING_GUIDE.md  SKILL.md  agent.md  claude.md  package-lock.json  package.json
lingokatutubo/backend/: convert_csv_to_json.py  detection_service.py  extraction_service.py  file_service.py  main.py  models.py  pipeline_service.py  pyproject.toml  reconstruction_service.py  requirements.txt  tagabawa_phrasebook_cleaned_auto(phrases).csv  test_translation_dataset.py  translation_data.json  translation_dataset.py
lingokatutubo/frontend/: next.config.ts  package.json  tsconfig.json
lingokatutubo/frontend/app/: globals.css  layout.tsx  page.tsx
lingokatutubo/frontend/app/about/: page.tsx
lingokatutubo/frontend/app/translate/: page.tsx
lingokatutubo/frontend/components/: navigation.tsx
lingokatutubo/frontend/hooks/: use-upload.ts
lingokatutubo/ocr_stage/: main.py
lingokatutubo/ocr_stage/services/: ocr_service.py  translator_service.py
